Fixing issue where dropdown menu would become visible even if only the space the menu was in was hovered.  Not the Services icon.

--- a/src/assets/styles/components/navbar.scss
+++ b/src/assets/styles/components/navbar.scss
@@ -123,7 +123,7 @@
 
             .dropdown-menu {
                 background-color: white;
-                // display: none;
+                visibility: hidden;
                 flex-direction: column;
                 position: absolute;
                 padding: 12px;
@@ -175,6 +175,7 @@
         }
 
         .dropdown-menu.show {
+            visibility: visible;
             display: flex;
             flex-direction: column;
             opacity: 1;
@@ -184,6 +185,7 @@
         li:hover {
 
             .dropdown-menu {
+                visibility: visible;
                 display: flex;
                 flex-direction: column;
                 opacity: 1;
